--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,62 +6,10 @@ body{
 
 
 
-.header{
-    width: 1200px;
-    height: 75px;
-    margin: -50;
-    margin-top: -300px;
-    padding: 20;
-    margin: 20px;
-    background: transparent;
+h1{
+    color:rgb(253, 70, 3);
+    font-family: 'nunito';
     
-}
-
-
-ul{
-    float: left;
-    display: flex;
-    padding-left: 420px;
-    text-align: center;
-    
-}
-
-ul li{
-    list-style: none;
-    margin-left: 55px;
-    margin-top: -35px;
-    font-size: 14px;
-    
-}
-
-ul li a{
-    text-decoration: none;
-    color: rgb(19, 18, 18);
-    font-family: sans-serif;
-    font-weight: bold;
-    transition: 0.4 ease-in-out;
-    
-}
-ul li a:hover{
-    color: orange;
-}
-
-.pg{
-    
-    width: 150px;
-    height: 40px;
-    background: orange;
-    border: 1px solid rgb(8, 8, 8);
-    border-radius: 10px;
-    margin-top: -40px;
-    float: left;
-    margin-left: 10px;
-}
-
-.pg a{
-    text-decoration: none;
-    color: rgb(252, 252, 250);
-    font-size: 15px;
 }
 
 .grid-container{
@@ -71,28 +19,8 @@ ul li a:hover{
 }
 
 
-.content{
-    justify-content: center;
-    text-align: center;
-    font-family: 'tahoma';
-    margin-bottom: 30px;
-    
-}
 
-.content h2{
-    
-    font-weight: bold;
-    color: orange;
-}
 
-.content p{
-    margin: 0px;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    padding-right: 250px;
-    padding-left: 250px;
-    font-size: 20px;
-}
 
 h5{
     font-family: 'cursive';
@@ -105,56 +33,15 @@ h3{
     font-weight: bold;
 }
 
-.col p{
-    font-family: 'spectral';
-}
-
-.pr{
-    
-    width: 150px;
-    height: 40px;
-    background: rgb(248, 4, 4);
-    border: 1px solid rgb(8, 8, 8);
-    border-radius: 10px;
-}
-
-.pr a{
-    text-decoration: none;
-    color: rgb(252, 252, 250);
-    font-size: 15px;
-}
-
-
-.grid-container{
-    text-align: center;
-    
-}
-
-.grid-container h2{
-    color: rgb(5, 5, 255);
-    font-weight: bold;
-}
-
-.par p{
-    margin: 30px;
-    justify-content: center;
-    font-size: 18px;
-}
 
 footer{
     width: 100%;
-    height: 400px;
+    height: 490px;
     background: rgb(190, 245, 190);
     padding-top: 7px;
     padding-left: 25px;
     padding-right: 25px;
 }
-
-.ico{
-    border-radius: 35px;
-}
-
-
 
 ol li{
     list-style:square;
@@ -166,10 +53,62 @@ ol li a{
     text-decoration: none;
     color: rgb(19, 18, 18);
     font-family: 'cursive';
-    color: orange;
+    color: orangered;
     transition: 0.4 ease-in-out;
     
 }
 ul li a:hover{
-    color: orange;
+    color: orangered;
 }
+
+
+/* .content{
+    justify-content: center;
+    text-align: center;
+    font-family: 'tahoma';
+    margin-bottom: 30px;
+    
+}
+
+.content h2{
+    
+    font-weight: bold;
+    color: orangered;
+}
+
+.content p{
+    margin: 0px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-right: 250px;
+    padding-left: 250px;
+    font-size: 20px;
+} */
+
+/* .col p{
+    font-family: 'spectral';
+}
+
+.pr{
+    
+    width: 150px;
+    height: 40px;
+    background: orangered;
+    border: 1px solid rgb(8, 8, 8);
+    border-radius: 10px;
+}
+
+.pr a{
+    text-decoration: none;
+    color: rgb(252, 252, 250);
+    font-size: 15px;
+} */
+
+
+
+
+/* .par p{
+    margin: 30px;
+    justify-content: center;
+    font-size: 18px;
+} */
